src/test/resources/de/cd4analysis/cocos/invalid/XXXNoCode2.cd
package de.cd4analysis.cocos;

classdiagram XXXNoCode2 {
  class A;
  class B;
  interface A;
  class B;
  enum C;
  class C;
}